TP4: minor change

--- a/tps/tp4/tp4.tex
+++ b/tps/tp4/tp4.tex
@@ -55,7 +55,7 @@
         f(x)g(x) \propto \mathcal{N} \left(x; \dfrac{\sigma_{2}^{2}}{\sigma_{1}^{2} + \sigma_{2}^{2}}\mu_{1} + \dfrac{\sigma_{1}^{2}}{\sigma_{1}^{2} + \sigma_{2}^{2}}\mu_{2}, \dfrac{1}{\sigma_{1}^{-2} + \sigma_{2}^{-2}} \right)
     \end{equation*}
 
-    Demuestre que en 1D, el paso de corrección del filtro de Kalman que se muestra a continuación es equivalente (hasta un factor de escala) a la multiplicación de las Gaussianas del estado predicho ($\mathcal{N}(x;\overline{\mu}_{1},\overline{\sigma}_{1}^{2})$) y de observación ($\mathcal{N}(z;x, \sigma_{obs}^{2})$) con media y varianza dadas por:
+    Demuestre que en 1D, el paso de corrección del Filtro de Kalman que se muestra a continuación es equivalente (hasta un factor de escala) a la multiplicación de las Gaussianas del estado predicho ($\mathcal{N}(x;\overline{\mu}_{1},\overline{\sigma}_{1}^{2})$) y de observación ($\mathcal{N}(z;x, \sigma_{obs}^{2})$) con media y varianza dadas por:
     
     \begin{align*}
         \mu &= \overline{\mu} + K (z - \overline{\mu})\\
