Slide 8: Improve slides

--- a/teoricas/teorica_08/src/bundle_adjustment.tex
+++ b/teoricas/teorica_08/src/bundle_adjustment.tex
@@ -11,8 +11,6 @@
     \frametitle{Bundle Adjustment}
     \note{Información extraída de https://youtu.be/BuRCJ2fegcc y de https://youtu.be/mZBdPgBtrCM}
     
-    \TODO{explicar mejor el hilo conductor de Levenberg–Marquardt a BA}
-    
     Bundle Adjustment es un caso
     
     \begin{itemize}
@@ -69,6 +67,14 @@
         \item Comparar ubicaciones de las proyecciones de los puntos 3D con los puntos medidos 2D
         \item Ajustar para minimizar el error en las imágenes
     \end{itemize}
+    
+\end{frame}
+
+\begin{frame}
+    \frametitle{Bundle Adjustment}
+    \note{Extraído de Cyrill Stachniss https://youtu.be/LKDLcKrWOIU?si=InRBlf5Nmf7mGM9H}
+    
+    \TODO{Agregar contenido de Bundle Adjustment siguiendo el curso de Cyrill Stachniss}
     
 \end{frame}
 
