Slide 8: Minor changes

--- a/teoricas/teorica_08/src/bundle_adjustment.tex
+++ b/teoricas/teorica_08/src/bundle_adjustment.tex
@@ -2,8 +2,16 @@
     \frametitle{Material para Bundle Adjustment}
     \note{Extraído de Curso de Cyrill Stachniss https://youtu.be/LKDLcKrWOIU?si=InRBlf5Nmf7mGM9H}
     \begin{itemize}
-        \item Cyrill Stachniss - The Basics about Bundle Adjustment Vídeo: \url{https://youtu.be/sobyKHwgB0Y?si=EqmuOjWNwKBI9jqH} Slides: \url{https://www.ipb.uni-bonn.de/html/teaching/photo12-2021/2021-pho2-09-BA-part1.pptx.pdf}
-        \item Cyrill Stachniss - The Numerics of Bundle Adjustment Vídeo: \url{https://youtu.be/LKDLcKrWOIU?si=InRBlf5Nmf7mGM9H} Slides: \url{https://www.ipb.uni-bonn.de/html/teaching/photo12-2021/2021-pho2-10-BA-part2.pptx.pdf}
+        \item Cyrill Stachniss - The Basics about Bundle Adjustment
+        
+        Vídeo: \url{https://youtu.be/sobyKHwgB0Y?si=EqmuOjWNwKBI9jqH}
+        
+        Slides: \url{https://www.ipb.uni-bonn.de/html/teaching/photo12-2021/2021-pho2-09-BA-part1.pptx.pdf}
+        \item Cyrill Stachniss - The Numerics of Bundle Adjustment
+        
+        Vídeo: \url{https://youtu.be/LKDLcKrWOIU?si=InRBlf5Nmf7mGM9H}
+        
+        Slides: \url{https://www.ipb.uni-bonn.de/html/teaching/photo12-2021/2021-pho2-10-BA-part2.pptx.pdf}
     \end{itemize}
 \end{frame}
 
