Slide 8: Add landmark_observation_x_y_sensor and landmark_observation_bearing_only_sensor images

--- a/teoricas/teorica_02/src/locomotion.tex
+++ b/teoricas/teorica_02/src/locomotion.tex
@@ -51,7 +51,7 @@
         {
             \includegraphics[width=0.15\columnwidth]{./images/acm-r5h_snake_robot.jpg}
         }
-   		\subfloat[]
+   		\subfloat[\tiny PhantomX Mark II]
    		{
        		\includegraphics[width=0.15\columnwidth]{images/hexapod_phantomX_mark_II.jpg}
    		}
