Slide 10: Add structure

--- a/teoricas/teorica_10/slides.tex
+++ b/teoricas/teorica_10/slides.tex
@@ -33,6 +33,16 @@
 	
 	\section{Control}
 	\input{src/control.tex}
+    
+    \section{Control de Motores}
+    \input{src/motor_control.tex}
+    
+    \section{Control de Posición}
+    \input{src/position_control.tex}
+    
+    \section{Trayectoria}
+    \input{src/trajectory_control.tex}
+    
 	
 	\section{Bibliografía}
 	\input{src/bibliography.tex}
