--- a/teoricas/teorica_10/src/control.tex
+++ b/teoricas/teorica_10/src/control.tex
@@ -2,10 +2,15 @@
     \frametitle{Material utilizado para estas slides}
     
     \begin{itemize}
-        \item Clase de Nived Chebrolu: \url{https://www.youtube.com/watch?v=pEVsedl2KO4}
-        \item 
+        \item Clase de Nived Chebrolu: \url{https://youtu.be/pEVsedl2KO4?si=_cwQpRPPUnQ04B3c}
+        \item curso: CS373 Udacity Programming a Robotic Car
     \end{itemize}
 
     
 \end{frame}
 
+\begin{frame}
+    \frametitle{Arquitectural de Control}
+    \note{Información extraída de https://youtu.be/pEVsedl2KO4?si=_cwQpRPPUnQ04B3c}
+    
+\end{frame}
