Slide 10: Add motor dc

--- a/teoricas/teorica_10/src/motor_control.tex
+++ b/teoricas/teorica_10/src/motor_control.tex
@@ -5,16 +5,22 @@
     \note{Información extraída de https://youtu.be/pEVsedl2KO4?si=_cwQpRPPUnQ04B3c}
     
     \begin{itemize}
-        \item 
+        \item Imán Permanentemente estacionario
+        \item Electromagnetismo induce torque
+        \item Anillos divididos + brushes cambian la dirección de la corriente
     \end{itemize}
+    
+    \TODO{Agregar imagenes y/o gif}
     
 \end{frame}
 
 \begin{frame}
-    \frametitle{Motores DC}
+    \frametitle{Controladores de Motores DC}
     \note{Información extraída de https://youtu.be/pEVsedl2KO4?si=_cwQpRPPUnQ04B3c}
     
     \begin{itemize}
+        \item Más corriente = más rotación
+        \item ¿Cómo modular corriente usando una señal digital?
         \item 
     \end{itemize}
     
